Fix issue with Customer Appointments not deleting when customer is deleted from the Customers list. Fix bug with incorrect messages displaying when deletion occurs. Updated README.md